[build-system]
requires = [
    "setuptools >= 40.8.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 100

[tool.check-manifest]
ignore = [
    "CONTRIBUTING.rst",
    "HISTORY.rst",
    "dev_requirements.txt",
    "Makefile",
    ".pre-commit-config.yaml",
    ".github/**",
    "docs/**",
    "scripts/**",
    "tests/**",
]
